# privch-client-flutter

./: .gitattributes  .gitignore  PRIVACY-POLICY.md  README.md
.lfs/binary/: privch-windows-0.4.2.rar  xinlake.privch-v0.5.0-release.apk  xinlake.privch-v0.5.1-release.apk  xinlake.privch-v0.5.2-release.apk  xinlake.privch-v0.6.0-release.apk
.lfs/privch-android/: dev.xinlake.privch-0.2.0.apk  dev.xinlake.privch-0.3.0.apk  dev.xinlake.privch-0.3.1.apk  xinlake.privch-v0.4.2-release.apk
.lfs/privch-windows/: privch-0.2.0.rar  privch-0.3.0.rar  privch-0.3.1.rar
application/: .gitignore  LICENSE  analysis_options.yaml  pubspec.yaml
application/android/: .gitignore  gradle.properties  settings.gradle
application/lib/: global.dart  main.dart
application/windows/: .gitignore  CMakeLists.txt
script/: fun-servers.ps1  privchx.ps1
script/powershell/: fun-servers.ps1  privchx.ps1  shadowsocks.ps1
window-interface/: pubspec.yaml
window-interface/plugin/: README.md  pubspec.yaml
window-interface/windows/: CMakeLists.txt  window_interface_plugin_c_api.cpp  window_placement.cpp
xinlake-platform/armoury-aar/: build.gradle
xinlake-platform/plugin/: CHANGELOG.md  README.md  pubspec.yaml
xinlake-qrcode/: CHANGELOG.md  pubspec.yaml
xinlake-qrcode/android/: build.gradle
xinlake-qrcode/android/src/main/cpp/: BarcodeReader.cpp  CMakeLists.txt
xinlake-qrcode/lib/: xinlake_qrcode.dart
xinlake-qrcode/plugin/: CHANGELOG.md  README.md  pubspec.yaml
xinlake-qrcode/windows/: CMakeLists.txt  zxing_reader.cpp
xinlake-qrcode/zxing-slib/: .gitignore  decode.vcxproj  decode.vcxproj.filters  encode.vcxproj  lib-zxing.vcxproj  lib-zxing.vcxproj.filters  zxing.sln
xinlake-responsive/: CHANGELOG.md  pubspec.yaml
xinlake-responsive/lib/: split_two.dart
xinlake-responsive/package/: README.md  pubspec.yaml
xinlake-text/: pubspec.yaml
xinlake-text/lib/: formatter.dart
xinlake-tunnel/plugin/windows/: CMakeLists.txt  _process.cpp  process_ctrl.cpp  proxy_ctrl.cpp  resource.h  resource.rc  xinlake_tunnel_method.cpp  xinlake_tunnel_plugin.cpp
xinlake-tunnel/plugin/windows/include/xinlake_tunnel/: xinlake_tunnel_plugin.h
xready/: pubspec.yaml
(+151 files in other folders)
